# world_nbt

./: README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.css  App.tsx  FileManipulator.tsx  MCWorldViewer.tsx  WorldEditor.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mcworld.rs  mojang_options.rs
test/world/: General Mob Farm Test.mcworld
